# ai-agents-stuff

./: .gitignore  agentic_ai_journey.md
ChoreApp/: .gitignore  CLAUDE.md
ChoreApp/backend/: Makefile  requirements.txt
ChoreApp/backend/app/: config.py  dependencies.py  logging_config.py  main.py
ChoreApp/backend/app/models/: ai.py  chore.py  history.py  notification.py
ChoreApp/backend/app/routers/: ai.py  chores.py  history.py  notifications.py  scheduler.py
ChoreApp/backend/app/services/: ai_service.py  notification_service.py  pb_service.py  recurrence_service.py  (+1 more)
ChoreApp/backend/tests/: test_ai_service.py  test_recurrence.py
ChoreApp/frontend/: package.json  proxy.ts
ChoreApp/frontend/app/: globals.css  layout.tsx  page.tsx
ChoreApp/frontend/components/: AIParseInput.tsx  ChoreCard.tsx  ChoreDetail.tsx  ChoreModal.tsx  CompletionFeed.tsx  ImportanceSelector.tsx  KanbanColumn.tsx  StatsChart.tsx  SubtaskList.tsx  ThemeToggle.tsx  UserMultiSelect.tsx
ChoreApp/frontend/contexts/: AuthContext.tsx  ThemeContext.tsx
ChoreApp/frontend/hooks/: useChores.ts  usePushNotifications.ts
ChoreApp/frontend/lib/: api.ts  constants.ts  pocketbase.ts  types.ts
ChoreApp/frontend/public/: sw.js
MCP/langraph/: client.py  langraph.py  main.py  pyproject.toml  server.py
MCP/server/: pyproject.toml  server.py
coding_agent/: coding_agent.py
v0_learning/: basics.py  birthday.py  index.html  os_tools.py  puter_chat.html  readme.md  triton_kernels.py
v1_mcp_server/: agent.py  google_tools.py  mcp_server.py  memory.py  pyproject.toml  readme.md  streamlit_app.py
(+10 files in other folders)
