[project]
name = "langraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.136.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.14",
    "langgraph>=1.1.8",
    "transformers>=5.5.4",
]
